# Architecture-Project

./: .clang-tidy  .gitignore  CMakeLists.txt
Testing/outputs/compress/: lake-small.cppm
Testing/outputs/maxlevel/: lake-small-65535.ppm
Testing/outputs/resize/: lake-large-100.ppm  lake-large-1000.ppm  lake-small-100.ppm  lake-small-1000.ppm
common/: CMakeLists.txt  binary.cpp  image_types.hpp  metadata.cpp  metadata.hpp  progargs.cpp  progargs.hpp
helpers/: CMakeLists.txt  helpers.cpp  helpers.hpp
imgaos/: CMakeLists.txt  imageaos.cpp  imageaos.hpp  maxlevel.cpp  maxlevel.hpp
imgsoa/: CMakeLists.txt  imagesoa.cpp  imagesoa.hpp
imtool-aos/: CMakeLists.txt  main.cpp
imtool-soa/: CMakeLists.txt  main.cpp
test_resources/input/: deer-small.ppm  lake-small.ppm
test_resources/test_outputs/: deerlarge_resized100.ppm  deerlarge_resized1000.ppm  deersmall_resized100.ppm  deersmall_resized1000.ppm  lakelarge_resized100.ppm  lakelarge_resized1000.ppm  lakesmall_resized100.ppm  lakesmall_resized1000.ppm  lakesmall_revertedsmall.ppm
utest-common/: CMakeLists.txt  metadata_test.cpp  proargs_test.cpp  readppm_test.cpp  writecppm_test.cpp  writeppm_test.cpp
utest-imgaos/: CMakeLists.txt  aosresize_test.cpp  compress_test_aos.cpp  compress_test_aos_image.cpp  cutfreq_aos_test.cpp  imageaos_test.cpp  maxlevel_test.cpp  resize_aos_test.cpp  resize_test.cpp
utest-imgsoa/: CMakeLists.txt  compress_test_soa.cpp  compress_test_soa_image.cpp  cutfreq_soa_test.cpp  imagesoa_test.cpp  maxlevel_test_soa.cpp  test_resize.cpp
